@@ -697,6 +697,7 @@ library:
 @tab Used in various EA games; files have extensions like WVE and UV2.
 @item Nullsoft Video (NSV) format @tab    @tab X
 @item ADTS AAC audio @tab X @tab X
+@item Creative VOC @tab X @tab X @tab Created for the Sound Blaster Pro.
 @end multitable
 
 @code{X} means that encoding (resp. decoding) is supported.
