@@ -1,0 +1,32 @@
+/*
+ * Creative Voice File demuxer.
+ * Copyright (c) 2006  Aurelien Jacobs <aurel@gnuage.org>
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+ */
+
+#ifndef VOC_H
+#define VOC_H
+
+#include "avformat.h"
+
+typedef struct voc_dec_context {
+    int remaining_size;
+} voc_dec_context_t;
+
+int voc_get_packet(AVFormatContext *s, AVPacket *pkt,
+                   AVStream *st, int max_size);
+
+#endif
